Change in education

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="about-me-info">
           <h3>¿Quien soy?</h3>
-          <h4>Soy Alejandro Sánchez, desarrollador frontend / backend y un poco de DevOps</h4>
+          <h4>Soy Alejandro Sánchez<br> Desarrollador frontend / backend y un poco de DevOps</h4>
           <p class="about-me-intro">
             Soy un desarrollador de software orientado a lenguajes como C# y JavaScript (NodeJs) con 4 años de experiencia.
             Tengo conocimiento en areas de implementación de proyectos, servidores en la nube y bases de datos. Me gusta utilizar Angular como tecnología frontend.
@@ -180,7 +180,7 @@
             <div class="school">
               <div class="school-indicator"></div>
               <div class="school-indicator-inclined"></div>
-              <h4>Facultad de ingeniería mecánica y eléctrica</h4>
+              <h4>Facultad de Ingeniería Mecánica y Eléctrica</h4>
               <p class="school-date">
                 2013 - 2018
               </p>
@@ -194,7 +194,7 @@
             <div class="school">
               <div class="school-indicator"></div>
               <div class="school-indicator-inclined"></div>
-              <h4>Colegio nacional de educación profesional técnica</h4>
+              <h4>Colegio Nacional de Educación Profesional Técnica</h4>
               <p class="school-date">
                 2010 - 2013
               </p>
